--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,3 +7,10 @@ on:
           default: World
           required: true
           type: string
+
+jobs:
+  reusable-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Greet someone
+        run: echo "Hello ${{ inputs.who-to-greet }}"
